# Infomary-voice-agent

./: .gitignore  package-lock.json  package.json
.claude/: settings.local.json
app/: page.tsx
app/api/fetch-history/: route.ts
app/api/save-message/: route.ts
backend/: .gitignore  agent.py  bot.py  database.py  logger.py  main.py  pyproject.toml  requirements.txt  test_agent.py  voice_agent.py
backend/tools/: agent_tools.py
frontend/: build_out.txt  build_out8.txt  lint.txt  lint10.txt  lint8.txt  lint9.txt  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/connection-details/: route.ts
frontend/app/api/contact/: route.ts
frontend/app/api/get-context/: route.ts
frontend/app/api/get-history/: route.ts
frontend/app/api/save-message/: route.ts
frontend/app/api/speechmatics-token/: route.ts
frontend/app/api/tools/: route.ts
frontend/app/chat/: page.tsx
frontend/app/components/: VoiceAssistantModel.jsx
frontend/app/dashboard/: page.tsx
frontend/app/hooks/: useAudioQueue.jsx
frontend/app/utils/: auth.jsx
frontend/app/voice/: VoiceAgentClient.tsx  page.tsx
frontend/public/: pcm-processor.js
frontend/tools/: EndConversation.ts  InsertRow.js  audioPlayer.ts  handleToolInvoke.ts  speechmaticsTools.ts
