[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.13.4",
    "gspread>=6.2.1",
    "resend>=2.26.0",
    "google-auth>=2.49.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "langchain==0.3.0",
    "langchain-core==0.3.0",
    "langchain-groq==0.2.0",
    "asyncpg>=0.31.0",
    "websockets>=16.0",
    "livekit-agents>=0.12.21",
    "livekit-plugins-openai>=0.12.4",
    "livekit-plugins-deepgram>=0.7.4",
    "livekit-plugins-elevenlabs>=0.8.3",
    "livekit-plugins-silero>=0.7.6",
    "livekit-plugins-turn-detector>=0.4.5",
    "livekit-plugins-groq>=0.1.3",
    "torch>=2.11.0",
    "livekit-plugins-cartesia>=0.4.12",
]
